--- a/1)Notes/13-Multithreding/mutlithreding.ipynb
+++ b/1)Notes/13-Multithreding/mutlithreding.ipynb
@@ -38,17 +38,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number:0\n",
+      "Number:1\n",
+      "Number:2\n",
+      "Number:3\n",
+      "Number:4\n",
+      "Letters:a\n",
+      "Letters:b\n",
+      "Letters:c\n",
+      "Letters:d\n",
+      "Letters:e\n",
+      "20.006500720977783\n"
+     ]
+    }
+   ],
+   "source": [
+    "import threading\n",
+    "import time\n",
+    "# this is the example of single thread --> it execute these two functions one by one\n",
+    "def print_number():\n",
+    "    for i in range(5):\n",
+    "        time.sleep(2)\n",
+    "        print(f\"Number:{i}\")\n",
+    "\n",
+    "def print_letter():\n",
+    "    for i in \"abcde\":\n",
+    "        time.sleep(2)\n",
+    "        print(f\"Letters:{i}\")\n",
+    "\n",
+    "t=time.time()\n",
+    "print_number()\n",
+    "print_letter()\n",
+    "finished_time=time.time()-t\n",
+    "print(finished_time)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "letters:a\n",
+      "Number:0\n",
+      "letters:b\n",
+      "Number:1\n",
+      "Number:2\n",
+      "letters:c\n",
+      "Number:3\n",
+      "letters:d\n",
+      "Number:4letters:e\n",
+      "\n",
+      "10.007704734802246\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now we are creating multiple threds to run both functions simultaneously\n",
+    "\n",
+    "import threading\n",
+    "import time\n",
+    "\n",
+    "def print_number():\n",
+    "    for i in range(5):\n",
+    "        time.sleep(2)\n",
+    "        print(f\"Number:{i}\")\n",
+    "\n",
+    "\n",
+    "def print_letter():\n",
+    "    for i in \"abcde\":\n",
+    "        time.sleep(2)\n",
+    "        print(f\"letters:{i}\")\n",
+    "\n",
+    "# Creating two threads\n",
+    "t1=threading.Thread(target=print_number)\n",
+    "t2=threading.Thread(target=print_letter)\n",
+    "\n",
+    "\n",
+    "t=time.time()\n",
+    "# Starting the thread\n",
+    "t1.start()\n",
+    "t2.start()\n",
+    "\n",
+    "# wait for the threads to complete\n",
+    "t1.join()\n",
+    "t2.join()\n",
+    "print(time.time()-t)"
+   ]
   }
  ],
  "metadata": {
@@ -58,7 +144,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
