--- a/1)Notes/13-Multithreding/multiprocessing.ipynb
+++ b/1)Notes/13-Multithreding/multiprocessing.ipynb
@@ -11,13 +11,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Processes that runs in parallel\n"
+    "Processes that runs in parallel\n",
+    "\n",
+    "\n",
+    "\n",
+    "CPU-Bound tasks --> Tasks that are heavy on CPU Usage\n",
+    "(E.g--> mathematical computation,data processing)\n",
+    "\n",
+    "\n",
+    "Parallel execution --> multiple cores of the cpu\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
