--- a/1)Notes/14-Memory management/Memory management.ipynb
+++ b/1)Notes/14-Memory management/Memory management.ipynb
@@ -68,6 +68,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sys.getrefcount(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
