--- a/1)Notes/14-Memory management/Memory management.ipynb
+++ b/1)Notes/14-Memory management/Memory management.ipynb
@@ -84,6 +84,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Garbage collection\n",
+    "\n",
+    "\n",
+    "pyhtons includes a cyclic garbage collector to handle reference cycles. Referance cycles occur when objects reference each other, preventing their referance counts reaching from zero.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gc\n",
+    "\n",
+    "# enable garbage collection\n",
+    "gc.enable()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gc.disable()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "582"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'collections': 318, 'collected': 1492, 'uncollectable': 0}, {'collections': 28, 'collected': 213, 'uncollectable': 0}, {'collections': 3, 'collected': 602, 'uncollectable': 0}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Grabage collection stats\n",
+    "print(gc.get_stats())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
