--- a/1)Notes/14-Memory management/Memory management.ipynb
+++ b/1)Notes/14-Memory management/Memory management.ipynb
@@ -155,6 +155,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get unreachable objects\n",
+    "print(gc.garbage)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
