--- a/1)Notes/14-Memory management/Memory management.ipynb
+++ b/1)Notes/14-Memory management/Memory management.ipynb
@@ -172,6 +172,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Memory management Best practices\n",
+    "\n",
+    "1. Use local variables: Local Variables have a shorter lifespan and are freed sooner than global variables.\n",
+    "\n",
+    "2. Avoid Circular Referance: Circular referance can lead to memory leaks if not properly managed.\n",
+    "\n",
+    "3. Use generators: Generators produce items one at a time and only keep one item in memory at time, making them memory efficient.\n",
+    "\n",
+    "\n",
+    "4. Explicitly Delete Objects: Use the del statement to delete variables and objects explicitly.\n",
+    "\n",
+    "\n",
+    "5. Profile memory usage: Use meomry profiling tools like tracemalloc and memory_profiler to identify memory leaks and optimize usage.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
