--- a/1)Notes/14-Memory management/Memory management.ipynb
+++ b/1)Notes/14-Memory management/Memory management.ipynb
@@ -196,7 +196,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import gc \n",
+    "\n",
+    "class Myobject:\n",
+    "\n",
+    "    def"
+   ]
   }
  ],
  "metadata": {
