--- a/1)Notes/14-Memory management/Memory management.ipynb
+++ b/1)Notes/14-Memory management/Memory management.ipynb
@@ -193,16 +193,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object Obj1 created\n",
+      "Object Obj2 created\n",
+      "object Obj1 is deleted\n",
+      "object Obj2 is deleted\n",
+      "object Obj1 is deleted\n",
+      "object Obj2 is deleted\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "498"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import gc \n",
     "\n",
     "class Myobject:\n",
     "\n",
-    "    def"
+    "    def __init__(self,name):\n",
+    "        self.name=name\n",
+    "        print(f\"Object {self.name} created\")\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        print(f\"object {self.name} is deleted\")\n",
+    "\n",
+    "# creating circular object\n",
+    "\n",
+    "obj1=Myobject(\"Obj1\")\n",
+    "obj2=Myobject(\"Obj2\")\n",
+    "obj1.ref=obj2\n",
+    "obj2.ref=obj1\n",
+    "\n",
+    "\n",
+    "del obj1\n",
+    "del obj2\n",
+    "\n",
+    "#manually trigger the garbage collection\n",
+    "gc.collect()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generators for memory efficiency\n",
+    "# GEnerators allows you to produce one item at a time\n",
+    "# Using memory efficiently by only keeping one item at a time\n",
+    "\n",
+    "\n",
+    "def generate_numbers(n):\n",
+    "    for i in range(n):\n",
+    "        yield i\n",
+    "\n",
+    "# USing generator\n",
+    "for num in generate_numbers(10000):\n",
+    "    print(num)\n",
+    "    if num>10:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Profiling memory usage with tracemalloc\n",
+    "\n",
+    "import tracemalloc\n",
+    "\n",
+    "def create_list():\n",
+    "    return [i for i in range(10000)]\n",
+    "\n",
+    "def main():\n",
+    "    tracemalloc.start()\n",
+    "\n",
+    "    create_list()\n",
+    "\n",
+    "    snapshot=tracemalloc.take_snapshot()\n",
+    "    top_stats=snapshot.statistics('lineno')\n",
+    "\n",
+    "    print('[Top 10]')\n",
+    "    for stat in top_stats[:10]:\n",
+    "        print(stat)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Top 10]\n",
+      "c:\\Users\\vaibh\\anaconda3\\Lib\\selectors.py:314: size=288 KiB, count=6, average=48.0 KiB\n",
+      "<frozen genericpath>:89: size=50.4 KiB, count=518, average=100 B\n",
+      "C:\\Users\\vaibh\\AppData\\Roaming\\Python\\Python312\\site-packages\\pygments\\lexer.py:508: size=17.2 KiB, count=220, average=80 B\n",
+      "C:\\Users\\vaibh\\AppData\\Roaming\\Python\\Python312\\site-packages\\pygments\\style.py:94: size=16.6 KiB, count=259, average=66 B\n",
+      "C:\\Users\\vaibh\\AppData\\Roaming\\Python\\Python312\\site-packages\\pygments\\lexer.py:591: size=14.9 KiB, count=253, average=60 B\n",
+      "C:\\Users\\vaibh\\AppData\\Roaming\\Python\\Python312\\site-packages\\pygments\\formatters\\terminal256.py:44: size=14.6 KiB, count=294, average=51 B\n",
+      "c:\\Users\\vaibh\\anaconda3\\Lib\\ast.py:52: size=13.2 KiB, count=139, average=97 B\n",
+      "C:\\Users\\vaibh\\AppData\\Roaming\\Python\\Python312\\site-packages\\pygments\\formatters\\terminal256.py:180: size=12.9 KiB, count=174, average=76 B\n",
+      "C:\\Users\\vaibh\\AppData\\Roaming\\Python\\Python312\\site-packages\\pygments\\token.py:44: size=10.7 KiB, count=159, average=69 B\n",
+      "c:\\Users\\vaibh\\anaconda3\\Lib\\tokenize.py:576: size=9208 B, count=164, average=56 B\n"
+     ]
+    }
+   ],
+   "source": [
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
