--- a/1)Notes/15-Flask Framework/Introduction.ipynb
+++ b/1)Notes/15-Flask Framework/Introduction.ipynb
@@ -10,6 +10,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "now we are going to perform some important operation in flask app so listen carefully "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
