--- a/1)Notes/15-Flask Framework/Introduction.ipynb
+++ b/1)Notes/15-Flask Framework/Introduction.ipynb
@@ -1,25 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# hell welcome to this flask tutorial"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "now we are going to perform some important operation in flask app so listen carefully "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  }
- ],
+ "cells": [],
  "metadata": {
   "language_info": {
    "name": "python"
