--- a/1)Notes/15-Flask Framework/Introduction.ipynb
+++ b/1)Notes/15-Flask Framework/Introduction.ipynb
@@ -1,22 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hii"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "hello everyone how can help you do"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "base",
