--- a/1)Notes/15-Flask Framework/Introduction.ipynb
+++ b/1)Notes/15-Flask Framework/Introduction.ipynb
@@ -1,13 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "hello \n"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "base",
