--- a/1)Notes/14-Memory management/Memory management.ipynb
+++ b/1)Notes/14-Memory management/Memory management.ipynb
@@ -339,6 +339,18 @@
    "source": [
     "main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hello"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
