--- a/1)Notes/17-Statistics/Statistics and its applications.ipynb
+++ b/1)Notes/17-Statistics/Statistics and its applications.ipynb
@@ -46,6 +46,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Mean is increased so large when big number is added so the solution is finding median instead of mean "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
