--- a/1)Notes/17-Statistics/Statistics and its applications.ipynb
+++ b/1)Notes/17-Statistics/Statistics and its applications.ipynb
@@ -77,6 +77,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "variance is used to calculate dispersion of data means how much data is dispersed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
