--- a/1)Notes/18-Feature Engineering/handling missing values.ipynb
+++ b/1)Notes/18-Feature Engineering/handling missing values.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 1 Missing Completely at Random, MCAR:\n",
+    "Missing completely at random (MCAR) is a type of missing data mechanism in which the probability of a value being missing is unrelated to both the observed data and the missing data. In other words, if the data is MCAR, the missing values are randomly distributed throughout the dataset, and there is no systematic reason for why they are missing.\n",
+    "\n",
+    "For example, in a survey about the prevalence of a certain disease, the missing data might be MCAR if the survey participants with missing values for certain questions were selected randomly and their missing responses are not related to their disease status or any other variables measured in the survey."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
