--- a/1)Notes/18-Feature Engineering/handling missing values.ipynb
+++ b/1)Notes/18-Feature Engineering/handling missing values.ipynb
@@ -22,6 +22,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 2. Missing at Random MAR:\n",
+    "Missing at Random (MAR) is a type of missing data mechanism in which the probability of a value being missing depends only on the observed data, but not on the missing data itself. In other words, if the data is MAR, the missing values are systematically related to the observed data, but not to the missing data.\n",
+    "Here are a few examples of missing at random:\n",
+    "\n",
+    "Income data: Suppose you are collecting income data from a group of people, but some participants choose not to report their income. If the decision to report or not report income is related to the participant's age or gender, but not to their income level, then the data is missing at random.\n",
+    "\n",
+    "Medical data: Suppose you are collecting medical data on patients, including their blood pressure, but some patients do not report their blood pressure. If the patients who do not report their blood pressure are more likely to be younger or have healthier lifestyles, but the missingness is not related to their actual blood pressure values, then the data is missing at random."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
