--- a/1)Notes/18-Feature Engineering/handling missing values.ipynb
+++ b/1)Notes/18-Feature Engineering/handling missing values.ipynb
@@ -865,17 +865,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# filling missing values with mean of the existing values\n",
-    "df['Age_median']=df['age'].fillna(df['age'].mean())"
+    "df['Age_mean']=df['age'].fillna(df['age'].mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Age_median</th>\n",
+       "      <th>Age_mean</th>\n",
        "      <th>age</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -965,29 +965,36 @@
        "</div>"
       ],
       "text/plain": [
-       "     Age_median   age\n",
-       "0     22.000000  22.0\n",
-       "1     38.000000  38.0\n",
-       "2     26.000000  26.0\n",
-       "3     35.000000  35.0\n",
-       "4     35.000000  35.0\n",
-       "..          ...   ...\n",
-       "886   27.000000  27.0\n",
-       "887   19.000000  19.0\n",
-       "888   29.699118   NaN\n",
-       "889   26.000000  26.0\n",
-       "890   32.000000  32.0\n",
+       "      Age_mean   age\n",
+       "0    22.000000  22.0\n",
+       "1    38.000000  38.0\n",
+       "2    26.000000  26.0\n",
+       "3    35.000000  35.0\n",
+       "4    35.000000  35.0\n",
+       "..         ...   ...\n",
+       "886  27.000000  27.0\n",
+       "887  19.000000  19.0\n",
+       "888  29.699118   NaN\n",
+       "889  26.000000  26.0\n",
+       "890  32.000000  32.0\n",
        "\n",
        "[891 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[['Age_median','age']]"
+    "df[['Age_mean','age']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mean imputation works well when we have normally distributed data"
    ]
   },
   {
