--- a/1)Notes/18-Feature Engineering/handling missing values.ipynb
+++ b/1)Notes/18-Feature Engineering/handling missing values.ipynb
@@ -830,7 +830,7 @@
    "source": [
     "# Imputation Missing Values \n",
     "\n",
-    "1- Mean Value Imputation\n"
+    "# 1- Mean Value Imputation\n"
    ]
   },
   {
@@ -995,6 +995,20 @@
    "metadata": {},
    "source": [
     "Mean imputation works well when we have normally distributed data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2-Median value imputation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we will use this when we have outliars in datasets"
    ]
   },
   {
