--- a/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "their is two types to handle this imbalanced dataset\n"
+    "their is two types to handle this imbalanced dataset\n",
+    "1) Up sampling\n",
+    "2) Down sampling\n"
    ]
   }
  ],
