--- a/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
@@ -12,9 +12,14 @@
    "metadata": {},
    "source": [
     "their is two types to handle this imbalanced dataset\n",
-    "1) Up sampling\n",
-    "2) Down sampling\n"
+    "1) Up sampling --> means increasing output of dataset which are having less outputs as datapoints\n",
+    "2) Down sampling --> means decreasing output of datasets which are having more output as datapoints\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
