--- a/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
+++ b/1)Notes/18-Feature Engineering/Handling Imbalanced datsets.ipynb
@@ -62,7 +62,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# creating dataframe with imbalanced dataset\n"
+    "# creating dataframe with imbalanced dataset\n",
+    "class_0=pd.DataFrame({\n",
+    "    'feature_1':np.random.normal(loc=0,scale=1,size=n_class_0),\n",
+    "    'feature_2':np.random.normal(loc=0,scale=1,size=n_class_0),\n",
+    "    'target':[0]*n_class_0\n",
+    "})\n",
+    "\n",
+    "class_1=pd.DataFrame({\n",
+    "    'feature_1':np.random.normal(loc=2,scale=1,size=n_class_1),\n",
+    "    'feature_2':np.random.normal(loc=2,scale=1,size=n_class_1),\n",
+    "    'target':[1]*n_class_1\n",
+    "})"
    ]
   }
  ],
